# war-challenge-computer-vision

./: README.md  pyproject.toml
war_challenge_computer_vision/: coordinates.py  main.py  read_map.py
war_challenge_computer_vision/colors/: territory_color.py
war_challenge_computer_vision/preprocessing/: preprocessing.py
war_challenge_computer_vision/regions/: regions.py
war_challenge_computer_vision/utils/: enviroment.py  timer.py
