[tool.poetry]
name = "war-challenge-computer-vision"
version = "0.1.0"
description = ""
authors = ["Labicom TEAM <pedroserpah@gmail.com>"]
readme = "README.md"
packages = [{include = "war_challenge_computer_vision"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
opencv-python = "^4.8.0.76"
pytesseract = "^0.3.10"
pillow = "^10.0.0"
webcolors = "^1.13"
scikit-image = "^0.21.0"
python-dotenv = {extras = ["cli"], version = "^1.0.0"}
unidecode = "^1.3.6"
easyocr = {git = "https://github.com/JaidedAI/EasyOCR.git"}
torch = {version = "^2.0.1+rocm5.4.2", source = "pytorch-gpu-amd"}
torchvision = {version = "^0.15.2+rocm5.4.2", source = "pytorch-gpu-amd"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
taskipy = "^1.12.0"
viztracer = "^0.15.6"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-cuda-12"
url = "https://download.pytorch.org/whl/nightly/cu121"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-amd"
url = "https://download.pytorch.org/whl/rocm5.4.2"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 115
show-source = true
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "UP",   # pyupgrade
  "N",    # pep8-naming
  "C90",  # mccabe
  "I",    # isort
  "PERF", # perflint
  "NPY",  # numpy
  "PL",   # pylint
  "RUF",  # ruff
]

[tool.taskipy.tasks]
lint = "ruff . --fix"
dev = "dotenv -f .shared.env run -- python war_challenge_computer_vision/main.py"
prod = "dotenv -f .prod.shared.env run -- python war_challenge_computer_vision/main.py"
profile = "dotenv -f .prod.shared.env run -- viztracer -o data/benchmarks/result.html war_challenge_computer_vision/main.py"
